Fix T53748: uniform `globalsBlock` was not being added was not being added to the shaders of the curves handles